# cebian

./: .cursorrules  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jieba_jni.cpp
app/src/main/cpp/include/cppjieba/: DictTrie.hpp  TextRankExtractor.hpp  Utils.hpp
app/src/main/res/anim/: float_ball_orbit_spin.xml  float_ball_plane_wobble.xml  float_ball_pulse_breathe.xml
app/src/main/res/drawable/: avd_float_ball_orbit.xml  avd_float_ball_plane.xml  avd_float_ball_pulse.xml  bg_message_card_frost.xml  bg_message_card_glass.xml  bg_message_card_ocean.xml  bg_message_card_slate.xml  bg_message_card_soft_black.xml  bg_message_card_soft_white.xml  bg_message_card_warm.xml  bg_message_danmaku_coral.xml  bg_message_danmaku_dark.xml  bg_message_danmaku_light.xml  bg_message_danmaku_mint.xml  bg_message_danmaku_outline.xml  bg_message_danmaku_sky.xml  ic_float_ball_orbit.xml  ic_float_ball_plane.xml  ic_float_ball_pulse.xml
app/src/main/res/values/: plurals.xml  strings.xml
app/src/main/res/values-en/: plurals.xml  strings.xml
app/src/main/res/xml/: file_paths.xml  (+1 more)
core/autofill/: build.gradle.kts
core/common/: build.gradle.kts
core/notification/: build.gradle.kts
feature/message/: build.gradle.kts
feature/notification/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/shake/: build.gradle.kts
gradle/: libs.versions.toml
(+582 files in other folders)
